--- a/src/CMCEx.Desktop/CMCEx.Desktop.csproj
+++ b/src/CMCEx.Desktop/CMCEx.Desktop.csproj
@@ -7,10 +7,10 @@
     <Product>DSKY-Ex</Product>
     <Description>External Reentry DSKY</Description>
 
-    <Version>1.0.1</Version>
-    <AssemblyVersion>1.0.1</AssemblyVersion>
-    <FileVersion>1.0.1</FileVersion>
-    <InformationalVersion>1.0.1</InformationalVersion>
+    <Version>1.2.0</Version>
+    <AssemblyVersion>1.2.0</AssemblyVersion>
+    <FileVersion>1.2.0</FileVersion>
+    <InformationalVersion>1.2.0</InformationalVersion>
 
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
@@ -19,7 +19,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
 
-    <ApplicationIcon>Assets\AGC.ico</ApplicationIcon>
+    <ApplicationIcon>Assets\DSKY.ico</ApplicationIcon>
 
     <PublishSingleFile>true</PublishSingleFile>
     <SelfContained>true</SelfContained>
